--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html>
   <head>
     <meta charset-"utf-8">
-    <meta name-"viewport" content-"width-device-width">
+    <meta name-"viewport" 
+    content-"width-device-width">
     <title>repl.it</title>
-    
+    <link href="style.css" rel="stylesheet"
+    type="text/css" />
+  </head><body>
+    <p> "Monty Practice" </p>
+    <script src ="script.js></script">
+    </body>
+    </html>
